# ReviewGate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.en.md  README.md  SECURITY.md  install.ps1  install.sh  reviewgate.toml.example
.github/: PULL_REQUEST_TEMPLATE.md
crates/cli/: Cargo.toml
crates/cli/src/: fix.rs  i18n.rs  main.rs  render.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/prompts/: intent_system.md  shared_system.md
crates/core/prompts/dimensions/: ai_smell.md  business.md  intent.md  logic.md  perf.md  security.md  style.md
crates/core/prompts/languages/: README.md  c.md  cangjie.md  clojure.md  cobol.md  cpp.md  crystal.md  csharp.md  css.md  dart.md  dockerfile.md  elixir.md  erlang.md  fortran.md  fsharp.md  go.md  graphql.md  groovy.md  haskell.md  html.md  java.md  javascript.md  julia.md  kotlin.md  lua.md  nim.md  objc.md  ocaml.md  pascal.md  perl.md  php.md  powershell.md  python.md  r.md  ruby.md  rust.md  scala.md  shell.md  solidity.md  sql.md  (+6 more)
crates/core/prompts/paths/: github-workflows.md
crates/core/src/: language.rs  lib.rs  progress.rs
crates/core/src/agent/: control_tools.rs  mod.rs  prompt.rs  run.rs
crates/core/src/apply/: mod.rs
crates/core/src/config/: mod.rs
crates/core/src/diff/: git.rs  mod.rs  model.rs  parse.rs
crates/core/src/gate/: mod.rs
crates/core/src/github/: mod.rs
crates/core/src/index/: cache.rs  grep.rs  mod.rs  treesitter.rs
crates/core/src/judge/: mod.rs  prompt.rs
crates/core/src/llm/: anthropic.rs  http.rs  mod.rs  openai.rs  tokens.rs
crates/core/src/model/: finding.rs  llm.rs  message.rs  mod.rs
crates/core/src/relocate/: mod.rs
crates/core/src/review/: aggregate.rs  context.rs  dedup.rs  intent.rs  mod.rs  prefetch.rs  rules.rs  units.rs
crates/core/src/tool/: builtins.rs  dup_tool.rs  exec_check.rs  index_tools.rs  mod.rs
crates/core/tests/: diff_modes.rs  incomplete.rs  intent.rs  orchestration.rs  pipeline.rs  samples.rs  treesitter_index.rs
docs/: index.html  (+5 more)
(+114 files in other folders)
