[package]
name = "reviewgate-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "reviewgate"
path = "src/main.rs"

[dependencies]
reviewgate-core = { path = "../core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
