[package]
name = "reviewgate-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "reviewgate_core"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
toml.workspace = true
globset = "0.4.18"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde_json.workspace = true
